# GestureVisualizer

./: CMakeLists.txt  README.md  main.cpp
datasets/: grufba_origin.txt  msr_3d_action_origin.txt  msr_3d_action_origin_clean_spline_025.txt  msr_3d_action_raw.txt
shaders/: basicShader.frag  basicShader.vert
util/: BSpline.cpp  BSpline.h  ConstantsUtil.h  FileUtil.cpp  FileUtil.h  MathUtil.cpp  MathUtil.h  Util.cpp  Util.h  initShaders.cpp  initShaders.h
